--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op-quagga (0.11.34+helium0+focal0+rev20200424214248) unstable; urgency=low
+
+  * New branch.
+
+ -- Masakazu Asama <m-asama@ginzado.co.jp>  Fri,  7 Feb 2020 20:59:26 +0900
+
 vyatta-op-quagga (0.11.34+vyos1+helium2) karmic; urgency=low
 
   * Bug #191: add ipv6 BGP clear soft in/out commands.
